# Plateforme_ocaml

./: README.md  contact.md  journal.md
rapport/: Makefile  rapport-abdorohmang-pariat.fdb_latexmk  rapport-abdorohmang-pariat.fls  rapport-abdorohmang-pariat.tex
shovelknight/: dune-project  shovelknight.opam
shovelknight/levels/: level_one.json  level_two.json
shovelknight/lib/: core.ml  core.mli  draw.ml  draw.mli  dune  enemy.ml  enemy.mli  entity.ml  entity.mli  exceptions.ml  game.ml  game.mli  gamestate.ml  gamestate.mli  levelhandler.ml  levelhandler.mli  menu.ml  menu.mli  object.ml  object.mli  player.ml  player.mli  state.ml  state.mli  texture.ml  texture.mli  types.mli
shovelknight/test/: dune  generators.ml  generators.mli  test_core.ml  test_enemies.ml  test_entities.ml  test_objects.ml  test_player.ml
